package org.example.lexer.token;

public record TokenType(String name) {
}
